themes/SuiteP/css/listview.scss
/* ... */
ul.chooserList.green.ui-sortable > li {
  background-color: $list-view-choose-columns-displayed;
}

ul.chooserList.red.ui-sortable > li {
  background-color: $list-view-choose-columns-hidden;
}

div.modal-header {
  padding: 25px;
}

#columnsFilterList {
  padding: 30px;
}

ul.chooserList.green.ui-sortable {
  margin-bottom: 30px;
}

div.modal-footer > button.btn.button.purple.btn-default {
  background-color: #AA9DCC;
}

div.modal-footer > button.btn.button.purple.btn-default:hover {
  background-color: #9589B3;
}

ul.clickMenu.selectmenu.SugarActionMenu.columnsFilterLink.listViewLinkButton {
  top: -1px;
}

ul.clickMenu.selectmenu.SugarActionMenu.columnsFilterLink.listViewLinkButton > li > a {
  margin: 0;
  padding: 5px 8px 7px 7px;
  top: -1px;
}

.preloading {
  background-image: url("../../../../themes/SuiteP/images/loading.gif");
  width: 48px;
  height: 48px;
}

#columnsFilterDialog div.modal-content {
  width: 450px;
}

/***/

ul.clickMenu > li > span.searchAppliedAlert {
  background-color: $navbar-alert-count-bg;
  position: absolute;
  line-height: 20px;
  color: $default-btn-color;
  height: 20px;
  width: 20px;
  border-radius: 30px;
  left: 14px;
  top: -16px;
  background-image: none;
  text-align: center;
}

div.qtip.qtip-default {
  border: none;
}

.dateTimeRangeChoice select {
  width: 125px;
}

.dateRangeInput {
  width: 90px;
}

.templateGroupChooser {
  width: 150px;
}

/* search form (and popup search form) */

.modal-content .search_form .view {
  background-color: initial;
}

#search_form label {
  font-weight: bold;
  white-space: nowrap;
}

.modal-content #search_form label {
  color: #000000;
}

.modal-content .search_form .view input[type="text"],
.modal-content .search_form .view textarea {
  background-color: #D4F1EA;
}

.search_form .view select,
.search_form .view select#saved_search_select {
  padding: initial;
}

.modal-content .search_form .view select,
.modal-content .search_form .view select#saved_search_select {
  border: 2px solid #A5E8D6;
}

.search_form .view .dateTimeRangeChoice {
  display: block;
  float: left;
}

.search_form .view .dateTimeRangeChoice select {
  width: 90px;
  margin-right: 4px;
}

.search_form .view .dateTimeRangeChoiceClear {
  display: block;
}

.search_form .view .col-lg-8 {
  width: initial;
}

.search_form .view div.search_fields_basic {
  line-height: 22px;
  padding-top: 10px;
}

.search_form .view .col-xs-12 {
  padding-right: 30px;
  min-height: initial;
}

.search_form .view .col-xs-12 input[type="text"],
.search_form .view .col-xs-12 textarea {
  width: 80%;
}

.search_form .view .templateGroupChooser {
  width: 100%;
}

.search_form .view .search_fields_basic .col-lg-8 {
  float: none;
  padding: initial;
}

.search_form .view #inlineSavedSearch > table > tbody > tr > td {
  width: 100%;
  display: block;
  float: none;
}

.search_form.non-popup input[type="text"],
.search_form.non-popup select,
.search_form.non-popup textarea {
  border: none;
  height: 40px;
  min-height: 40px;
  padding: 5px;
  line-height: 20px;
}

.search_form.non-popup select[multiple],
.search_form.non-popup textarea {
  min-height: 80px;
}

.search_form.non-popup .view {
  padding: 10px 0 10px 30px;

  .modal-preload-hidden {
    min-height: 100px;
    background-image: url("../../../../themes/SuiteP/images/loading.gif");
    background-position: center;
    background-repeat: no-repeat;
  }

  search-clear {
    display: none;
    clear: both;
  }

  @media (min-width: 992px) {
    .modal-search .modal-lg {
      width: 600px;
    }
  }

  @media (max-width: 594px) {
    .modal-search .col-xs-12.col-sm-12.col-md-12.col-lg-8 {
      width: 100%;
    }
    .modal-search .form-item {
      width: 100%;
    }
  }

  .modal-search .submitButtonsAdvanced {
    float: right;
    padding-right: 30px;
  }
  .list tr.pagination-unique td {
    padding: 0px;
  }
}

ul.clickMenu.selectmenu.SugarActionMenu.listViewLinkButton > li.desktopOnly {
  display: none;
}

ul.clickMenu.selectmenu.SugarActionMenu.listViewLinkButton > li.mobileOnly {
  display: none;
}

ul.clickMenu.selectmenu.SugarActionMenu.listViewLinkButton > li > a.glyphicon-remove {
  background-color: $navbar-alert-count-bg;
}

ul.clickMenu.selectmenu.SugarActionMenu.listViewLinkButton > li.desktopOnly > a.glyphicon-remove {
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  padding: 0px 1px 3px 1px;
  line-height: 0.8;
}

ul.clickMenu.selectmenu.SugarActionMenu.listViewLinkButton > li.desktopOnly > a.glyphicon-remove:before {
  content: '';
}

@media (min-width: 768px) {

  ul.clickMenu.selectmenu.SugarActionMenu.listViewLinkButton > li.desktopOnly {
    display: block;
  }

  ul.clickMenu.selectmenu.SugarActionMenu.listViewLinkButton > li > a.glyphicon-remove {
    background-color: $navbar-alert-count-bg;
    padding: 0;
    position: absolute;
    right: -8px;
    top: -5px;
  }

}

@media (max-width: 768px) {

  ul.clickMenu.selectmenu.SugarActionMenu.listViewLinkButton > li.mobileOnly {
    display: block;
  }

  ul.clickMenu.selectmenu.SugarActionMenu.listViewLinkButton > li > a.glyphicon-remove {
    background-color: $navbar-alert-count-bg;
    border-top-right-radius: 3px;
    border-bottom-right-radius: 3px;
    left: 6px;
    width: 26px;
    height: 27px;
    top: -1px;
    padding: 6px;
  }

}

/* search form (and popup search form) */

.modal-content .search_form .view input[type="text"],
.modal-content .search_form .view textarea {
  background-color: #D4F1EA;
}

.search_form .view select,
.search_form .view select#saved_search_select {
  padding: initial;
}

.modal-content .search_form .view select,
.modal-content .search_form .view select#saved_search_select {
  border: 2px solid #A5E8D6;
}

.search_form .view .col-xs-12 input[type="text"],
.search_form .view .col-xs-12 textarea {
  width: 80%;
}
/* ... */

